# apis-oebl-irs-devops

./: .devcontainer.json  Dockerfile  Dockerfile_dev  Pipfile  import_gideon_data_2023-07-14.ipynb  import_gideon_data_3-22.ipynb  oebl_irs_workflow.code-workspace  pyproject.toml  start.sh  start_dev.sh
.github/workflows/: deploy.yml
apis/: urls.py
apis/settings/: auth.py  base.py  dev.py
celery_config/: celery.conf  celery_dev.conf
oebl_editor/: admin.py  api_urls_v1.py  apps.py  markup.py  models.py  permissions.MD  permissions.py  queries.py  serializers.py  urls.py  views.py
oebl_editor/migrations/: 0001_initial.py  0002_auto_20220630_1524.py  0003_auto_20220705_1136.py  0004_auto_20220707_1334.py  0005_remove_lemmaarticle_current_version.py
oebl_irs_workflow/: api_urls_v1.py  api_views.py  apps.py  models.py  permission.py  serializers.py  signals.py
oebl_irs_workflow/migrations/: 0002_lemmaarticle_lemmaarticleversion_userarticleassignment_userarticlepermission.py  0003_auto_20220628_1305.py  0004_auto_20220707_1334.py
oebl_irs_workflow/tests/: test_author_assignments.py  test_editor_assignments.py  test_user_assignments.py  utilities.py
oebl_research_backend/: admin.py  api_urls_v1.py  api_views.py  autocompletes.py  models.py  serializers.py  tasks.py
oebl_research_backend/migrations/: 0005_auto_20211207_1035.py  0006_auto_20211209_1756.py  0007_auto_20220218_1702.py  0008_irsperson_alternative_names.py  0009_irsperson_secondary_literature.py  0010_irsperson_zotero_keys.py  0011_auto_20220302_1329.py  0012_irsperson_gideon_legacy_literature.py  (+3 more)
(+8 files in other folders)
