[tool.poetry]
name = "oebl-irs-devops"
version = "0.1.22"
description = "OEBL irs project for auto devops"
authors = ["Matthias Schlögl <m.schloegl@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
requests = "^2.25.0"
sentry-sdk = "^0.19.5"
celery = "~5.2"
SPARQLWrapper = "^1.8.5"
unicodecsv = "^0.14.1"
django-model-utils = "^4.1.1"
django-summernote = "^0.8.11"
djangorestframework-jsonschema = "^0.1.1"
dj-database-url = "^0.5.0"
gunicorn = "^20.0.4"
psycopg2 = "^2.8.6"
acdh-django-charts = "^0.5.3"
pandas = "0.25.3"
django-allow-cidr = "^0.3.1"
apis-core = "~0.16"
django-celery-results = "^2.0.1"
supervisor = "^4.2.1"
whitenoise = "^5.3.0"
django-csp = "^3.7"
djoser = "^2.1.0"
django-extensions = "^3.1.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
django-extensions = "^3.1.0"
pylint = "^2.6.0"
dephell = {extras = ["full"], version = "^0.8.3"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
